# example-code-2e

./: pyproject.toml
01-data-model/: data-model.ipynb  vector2d.py
02-array-seq/: array-seq.ipynb  notes.ipynb
03-dict-set/: 03-dict-set.ipynb
03-dict-set/py3.10/: creator.py
04-text-byte/: gradient.ipynb
05-data-classes/: gradient.ipynb
05-data-classes/dataclass/: club.py  hackerclub.py
06-obj-ref/: Untitled-1.ipynb
07-1class-func/: gradient.ipynb
09-closure-deco/: Untitled-1.ipynb
